Fix map not showing on smaller screeens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,12 @@ html, body {
     margin: 0;
 }
 
+#mapContainer {
+    height: 750px;
+}
+
 #map {
-    height: 100vh;
-    width: 100vw;
+    height: 500px;
+    /* width: 100%; */
+    /* border: solid 1px black; */
 }
